--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 # php artisan serve --port=8001
 
+PROJECT_NAME=Invoicin
+PROJECT_EMAIL=app@invoicin.com
+PROJECT_SUPPORT_EMAIL=support@invoicin.com
+PROJECT_ADMIN_EMAIL=admin@invoicin.com
+PROJECT_URL=http://127.0.0.1:8000
+
 APP_NAME=Organization
 APP_ENV=local
 APP_KEY=base64:Y8MXx4Q/8HvcDb7yY+4b3lrtFrS/Wokib4fCgH4nqZU=
