--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ PROJECT_NAME=Invoicin
 PROJECT_EMAIL=app@invoicin.com
 PROJECT_SUPPORT_EMAIL=support@invoicin.com
 PROJECT_ADMIN_EMAIL=admin@invoicin.com
-PROJECT_URL=http://invoicin-gateway-api.test
+PROJECT_URL=https://invoicin-organization-api.test
 
 APP_NAME=Organization
 APP_ENV=local
