--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,16 @@
 # php artisan serve --port=8001
 
-PROJECT_NAME=Invoicin
-PROJECT_EMAIL=app@invoicin.com
-PROJECT_SUPPORT_EMAIL=support@invoicin.com
-PROJECT_ADMIN_EMAIL=admin@invoicin.com
-PROJECT_URL=https://invoicin-organization-api.test
+APP_UI_URL=https://localhost:9000
 
-APP_NAME=Organization
+APP_NAME=Invoicin
 APP_ENV=local
 APP_KEY=base64:Y8MXx4Q/8HvcDb7yY+4b3lrtFrS/Wokib4fCgH4nqZU=
 APP_DEBUG=true
 APP_URL=https://invoicin-organization-api.test
 APP_GATEWAY_URL=http://invoicin-gateway-api.test
+APP_EMAIL=app@invoicin.com
+APP_SUPPORT_EMAIL=support@invoicin.com
+APP_ADMIN_EMAIL=admin@invoicin.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
